# Proxy-SOCKSv5

./: CMakeLists.txt  README.md
client/: client.c
doc/: socks5d.8
src/: CMakeLists.txt  config.c  config.h  main.c  socks5_server.c  socks5_server.h
src/myProtocol/: my_proto_stm.h  my_protocol_hello.c  my_protocol_hello.h  my_protocol_request.c  my_protocol_request.h  my_protocol_server.c  my_protocol_server.h
src/parsers/: dns_parser.c  dns_parser.h  hello_parser.c  hello_parser.h  http_parser.c  http_parser.h  login_def.h  login_parser.c  login_parser.h  my_hello_parser.c  my_hello_parser.h  my_request_parser.c  my_request_parser.h  pop3_parser.c  pop3_parser.h  request_parser.c  request_parser.h
src/stm/: socks5_stm.h  stm_connect_origin.c  stm_connect_origin.h  stm_copy.c  stm_copy.h  stm_doh.c  stm_doh.h  stm_hello.c  stm_hello.h  stm_hello_auth.c  stm_hello_auth.h  stm_request.c  stm_request.h
src/utils/: args.c  args.h  base64.c  base64.h  buffer.c  buffer.h  logger.c  logger.h  metrics.c  metrics.h  netutils.c  netutils.h  params.c  params.h  selector.c  selector.h  socket_creation_errors.h  stm.c  stm.h
